# me

./: .gitignore  Cargo.toml  LICENSE  docker-compose.yml
entity/: Cargo.toml
entity/src/: auth_provider.rs  blog_post.rs  blog_post_comment.rs  blog_post_comment_reaction.rs  blog_post_image.rs  blog_post_reaction.rs  blog_post_tag.rs  blog_post_technology.rs  blog_series.rs  blog_series_post.rs  blog_series_technology.rs  certificate.rs  common_tag.rs  education.rs  experience.rs  lib.rs  mod.rs  open_source_contribution.rs  prelude.rs  project.rs  project_image.rs  project_link.rs  project_technology.rs  related_technology.rs  sea_orm_active_enums.rs  skill.rs  summary.rs  technology.rs  user.rs  user_suspension.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250908_030112_create_users.rs  m20250909_050520_create_portfolio.rs  m20250911_185836_create_cv.rs  m20250911_205500_create_blog.rs
src/: app.rs  main.rs
src/components/: mod.rs
src/components/common/: mod.rs  socials.rs  title.rs
src/components/footer/: footer.rs  links.rs  made.rs  mod.rs
src/components/global/: state.rs
src/components/intro/: description.rs  experience.rs  intro.rs  mod.rs  socials.rs  timeline.rs  timeline_item.rs  title.rs
src/components/navbar/: buttons.rs  mod.rs  navbar.rs
src/pages/: cv.rs  home.rs  mod.rs  privacy_policy.rs  terms_and_conditions.rs
style/: footer.scss  intro.scss  main.scss  navbar.scss  policy.scss
