[package]
name = "entity"
version = "1.0.0"
edition = "2024"
publish = false
authors = ["Afonso Barracha <barracha.afonso@gmail.com>"]
license = "MPL-2.0"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "1.1.16", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.42"
